css/style.css
/* ... */
.platform-android .action-sheet {
    margin-left: 8px;
    margin-right: 8px;
}
.platform-android .action-sheet-group {
    margin-bottom: 8px;
    border-radius: 4px;
    background-color: #fff;
}
.platform-android .action-sheet-cancel {
   display: block;
}

@media ( max-height: 380px ) {
    .greet-view .head-title {
        padding-top: 0;
    }
}

